LBO-7 пофиксил то что вижу